none of the three recipe viewers have an API for stopping ghost item drags. ...maybe I'm doing this the wrong way.